# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "talent-triage-env"
version = "0.1.0"
description = "Job Application Environment for OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "openai>=2.7.2,<3",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"